# apk-migrate-tui

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apk_migrate_tui/: adb.py  app.py  archive.py  diff.py  logging_utils.py  models.py  operations.py  session.py  settings.py
apk_migrate_tui/screens/: app_list.py  device_select.py  dialogs.py  mode_select.py  resume_screen.py  settings_screen.py  single_device_app_list.py  single_device_select.py  uninstall_confirm.py
tests/: test_adb_parsing.py  test_archive.py  test_diff.py  test_session.py  test_single_device_mode.py  test_ui_smoke.py
